<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/white"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/ease_common_tab_bg"
            android:onClick="back" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@mipmap/icon_new_arrow_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/The_new_group_chat"
            android:textColor="@color/color_394043"
            android:textSize="20sp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ease_common_tab_bg"
            android:onClick="save"
            android:text="@string/button_save"
            android:textColor="@color/color_394043"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_cdd4dc"/>
    <EditText
        android:id="@+id/edit_group_name"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/group_name"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_cdd4dc"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/line_cdd4dc"/>
    <EditText
        android:id="@+id/edit_group_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/Group_chat_profile"
        android:lines="5"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:background="@color/line_cdd4dc"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_cdd4dc"/>
    <LinearLayout 
        android:layout_width="match_parent"
       android:layout_height="43dp"
        android:background="@color/color_white"
        >
        <TextView 
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Whether_the_public"
            android:textColor="#394043"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            />
        
        <CheckBox 
            android:id="@+id/cb_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:button="@drawable/em_taggle_bg_selector"
            />
        
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_cdd4dc"/>
    <LinearLayout 
        android:id="@+id/ll_open_invite"
        android:layout_width="match_parent"
       android:layout_height="43dp"
        android:background="@color/color_white">
        <TextView 
            android:id="@+id/second_desc"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Open_group_members_invited"
            android:textColor="@color/color_394043"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            />
        
        <CheckBox 
            android:id="@+id/cb_member_inviter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:button="@drawable/em_taggle_bg_selector"
            />
        
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_cdd4dc"/>
</LinearLayout>